# llvm-mctoll

./: .clang-format  .gitignore  CMakeLists.txt  COFFDump.cpp  ELFDump.cpp  EmitRaisedOutputPass.cpp  EmitRaisedOutputPass.h  ExternalFunctions.cpp  ExternalFunctions.h  FunctionFilter.cpp  FunctionFilter.h  IncludedFileInfo.cpp  IncludedFileInfo.h  InstMetadata.h  LICENSE  LLVMBuild.txt  LLVMVersion.txt  MCInstOrData.cpp  MCInstOrData.h  MCInstRaiser.cpp  MCInstRaiser.h  MachODump.cpp  MachineFunctionRaiser.cpp  MachineFunctionRaiser.h  MachineInstructionRaiser.h  ModuleRaiser.cpp  ModuleRaiser.h  Opts.td  PeepholeOptimizationPass.cpp  PeepholeOptimizationPass.h  PointerArgumentPromotionPass.cpp  PointerArgumentPromotionPass.h  README.FR  README.md  Raisers.def.in  RuntimeFunction.cpp  RuntimeFunction.h  SimplifyPointerOperationPass.cpp  SimplifyPointerOperationPass.h  WasmDump.cpp  (+3 more)
.github/: CODEOWNERS  cpp.json
.github/workflows/: cibuild.yml  debug.yml  native.yml  release.yml
ARM/: ARMArgumentRaiser.cpp  ARMArgumentRaiser.h  ARMCreateJumpTable.cpp  ARMCreateJumpTable.h  ARMEliminatePrologEpilog.cpp  ARMEliminatePrologEpilog.h  ARMFrameBuilder.cpp  ARMFrameBuilder.h  ARMFunctionPrototype.cpp  ARMFunctionPrototype.h  ARMInstructionSplitting.cpp  ARMInstructionSplitting.h  ARMMIRevising.cpp  ARMMIRevising.h  ARMMachineInstructionRaiser.cpp  ARMMachineInstructionRaiser.h  ARMModuleRaiser.cpp  ARMModuleRaiser.h  ARMRaiserBase.h  ARMSelectionDAGISel.cpp  ARMSelectionDAGISel.h  CMakeLists.txt
ARM/DAG/: DAGBuilder.cpp  DAGBuilder.h  DAGRaisingInfo.cpp  DAGRaisingInfo.h  FunctionRaisingInfo.cpp  FunctionRaisingInfo.h  IREmitter.cpp  IREmitter.h  InstSelector.cpp  InstSelector.h  SelectionCommon.h
RISCV/: CMakeLists.txt  RISCV32MachineInstructionRaiser.cpp  RISCV32ModuleRaiser.cpp  RISCV32ModuleRaiser.h  RISCV64MachineInstructionRaiser.cpp  RISCV64ModuleRaiser.cpp  RISCV64ModuleRaiser.h  RISCVCallingConvention.cpp  RISCVCallingConvention.h  RISCVModuleRaiser.cpp  RISCVModuleRaiser.h
Raiser/: CMakeLists.txt  FunctionFilter.cpp  FunctionFilter.h  IncludedFileInfo.cpp  IncludedFileInfo.h  InstMetadata.h  MCInstOrData.cpp  MCInstOrData.h  MCInstRaiser.cpp  MCInstRaiser.h  MachineFunctionRaiser.cpp  MachineFunctionRaiser.h  MachineInstructionRaiser.h  ModuleRaiser.cpp  ModuleRaiser.h  RuntimeFunction.cpp  RuntimeFunction.h
X86/: CMakeLists.txt  X86AdditionalInstrInfo.cpp  X86AdditionalInstrInfo.h  X86FuncPrototypeDiscovery.cpp  X86JumpTables.cpp  X86MachineInstructionRaiser.cpp  X86MachineInstructionRaiser.h  X86MachineInstructionRaiserSSE.cpp  X86MachineInstructionRaiserUtils.cpp  X86ModuleRaiser.cpp  X86ModuleRaiser.h  X86RaisedValueTracker.cpp  X86RaisedValueTracker.h  X86RaiserUtils.h  X86RegisterUtils.cpp  X86RegisterUtils.h
doc/: Notes.md  Usage.md  sysroot_flag.md
test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
test/asm_test/X86/: discover-ret-type.s  func-xor-three-arg.s  func-xor-two-arg.s  lit.local.cfg  mov-reaching-def.s  raise-add16rr.s  raise-add8ri.s  raise-and.s  raise-basic-globals.s  raise-binary-op-imm-to-reg.s  raise-binary-op-mem-to-reg.s  raise-binary-op-reg-to-reg.s  raise-binary-op-result-to-mem.s  raise-branch-empty-mbb.s  raise-bt.s  raise-call64m.s  raise-call64r-float.s  raise-cmov.c  raise-cmovbe.s  raise-cmovle.s  raise-cmovns.s  raise-cmovs.s  raise-cmp.s  raise-cmpimm-submemop-test.s  raise-cmpss-cmpsd.s  raise-cvt.s  raise-divr.s  raise-divxxm.c  raise-divxxr.c  raise-exit-call.s  raise-funnel-shift-left.c  raise-funnel-shift-right.c  raise-imul-rmi.s  raise-imul64r.s  raise-imul64rm.s  raise-imulrri.c  raise-indexreg-int.s  raise-ja.s  raise-jb-inc-dec.s  raise-jbe.s  (+55 more)
test/bug_fixes/: issue-62.c  issue-69.c  issue-70.c  issue169-1.c
test/dhrystone/: README  dhry.h  dhry.test  dhry_funcs_mod.c  dhry_main.c
test/dhrystone/ARM/: dhry.test  lit.local.cfg
test/filter_function/: README  exec.c  filters-exec.txt  filters-shared.txt  lit.local.cfg  shared.c
test/smoke_test/: access-stack-at-positive-offset.c  assert.c  call-function-pointer.c  call-memset.c  call-register-void-return.c  call-register.c  cmp-mem.c  compute-stack-stride.c  detect-ptr-returntype.c  discover-func-proto-optimized-arg.c  discover-ret-type-reach-tree.c  div-mem.c  div-reg.c  division-tests.c  double_args.c  double_float_int_args.c  effective-addr-test.c  eflags-test.c  externvar-test.c  factorial-test.c  fibfunc-test.c  float_args.c  float_args_zero.c  float_conversions.c  float_stack_promotion.c  float_test.c  fp-mem-ops.c  fp-ops.c  fprintf.c  frame-obj-alloc.c  func-arg-liveness.c  func-xor-two-arg.s  global-array-access-opt.c  global-array-access.c  global-initialized-array-access.c  global-static-pointer.c  globalvar-test.c  hello-float.c  hello.c  hello_gcc.c  (+67 more)
test/smoke_test/ARM/: factorial-test.c  fibfunc-test.c  func-arg-liveness.c  global-array-access.c  globalvar-test.c  hello.c  lit.local.cfg  short.c  simple-phi-test.c  strcmp-test.c  switch-test.c  switch_test.c  test-1-test.c  test-2-test.c  test-3-test.c  variadic-call-test.c
test/smoke_test/Inputs/: externvar-lib.c  factorial.c  fibfunc.c  globalvar.c  param-long.c  param-long.h  reduce.c  return-type-detection-dis-run  return-type-detection-ll  simple-phi.c  strcmp.c  switch_func.c  test-1.c  test-2.c  test-3.c  transform.c
test/unittests/ARM/FrameBuilder/: frame.c  lit.local.cfg  non-sp.s
test/unittests/ARM/FuncArgsAndReturn/: seven_args.c
test/unittests/ARM/FunctionPrototype/: lit.local.cfg  no_ret_and_args.c  six_args.c
test/unittests/ARM/MIRevising/: BLreloc.c
test/unittests/ARM/PrologEpilog/: push_pop.s  push_pop_branch.s  stm_ldm_no_frame.s  stm_ldm_with_frame.s  str_ldr.s
test/unittests/ARM/SplitARMInst/: asr.s  ldrstr_imm.s  ldrstr_imm_pre.s  ldrstr_reg.s  ldrstr_reg_pre.s  ldrstr_shf_pre.s  ldrstr_shift.s  lit.local.cfg  lsl.s  lsr.s  ror.s  rrx.s  splitc.s  splitcs.s  splits.s
test/unittests/ARM/Switch/: switch4.C
test/unittests/ARMInstrs/: add-dis.ll  add.s  harness.c  inst-test.py
translations/: README.pt-br.md
